PROJECT(netvmbench)
SET(NBEE_BASE_DIR  ${CMAKE_CURRENT_SOURCE_DIR}/../../../..)
INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR} ${NBEE_BASE_DIR}/include)
LINK_DIRECTORIES(${NBEE_BASE_DIR}/lib)

IF(WIN32)
	INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR}/../../../../../WPdPack/Include)
	INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR}/../../../../include)
	#ELSE(WIN32)
	#	INCLUDE_DIRECTORIES(${NETVM_INCLUDE_DIR})
ENDIF(WIN32)

IF(WIN32)
	LINK_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR}/../../../../../WPdPack/Lib)
	LINK_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR}/../../../../lib)
ENDIF(WIN32)

ADD_EXECUTABLE(
	netvmbench

	netvmbench.cpp
)

TARGET_LINK_LIBRARIES(
	netvmbench
	nbnetvm
)

IF(WIN32)
	ADD_CUSTOM_COMMAND(
		TARGET netvmbench
		POST_BUILD
		COMMAND cp ${CMAKE_CFG_INTDIR}/netvmbench.exe ../../../../bin/.
	)
ENDIF(WIN32)
